[package]
name = "we-contracts-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
syn = { version = "1.0.102", features = ["full"] }
quote = "1.0.21"
