[package]
name = "cargo-we"
version = "0.1.1"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Setup and deployment tool for developing WASM based smart-contracts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-enterprise/we-cdk"
repository = "https://github.com/waves-enterprise/we-cdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.18.0"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "1", features = ["full", "extra-traits", "parsing"] }
wasmprinter = "0.2"
wat = "1"
