[package]
name = "we-cdk"
version = "0.2.0-rc2"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Rust library for writing Waves Enterprise smart-contracts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-enterprise/we-cdk"
repository = "https://github.com/waves-enterprise/we-cdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
we-contract-codegen = { version = "0.2.0-rc2", path = "../codegen" }
we-contract-proc-macro = { version = "0.2.0-rc2", path = "../proc-macro" }
