[package]
name = "we-contract-codegen"
version = "0.2.0-rc3"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "WEVM bindings and algorithms for intermediate representation"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-enterprise/we-cdk"
repository = "https://github.com/waves-enterprise/we-cdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
