[package]
name = "we-contract-proc-macro"
version = "0.3.2"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Procedural macros for generating code for WASM contracts"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waves-enterprise/we-cdk"
repository = "https://github.com/waves-enterprise/we-cdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
