[package]
name = "we-contract-sdk"
version = "0.1.0"
edition = "2021"
authors = ["DEADBLACKCLOVER <deadblackclover@protonmail.com>"]
description = "Rust library for writing Waves Enterprise smart-contracts"
license = "MIT"
readme = "README.md"
homepage = ""
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
we-contract-codegen = { version = "0.1.0", path = "../codegen" }
we-contract-proc-macro = { version = "0.1.0", path = "../proc-macro" }
